Implement API test for the controllers & Make unit tests for  the mappers & Reupload the difference